<resources>
    <string name="app_name">Misk\'i Llajta</string>


    <!--    BOTONES   -->
    <string name="btnInfo">Más información</string>
    <string name="btnAcerca">Acerca de nosotros</string>


    <!--    TITULOS    -->
    <string name="tituloMenu">BIENVENIDO</string>
    <string name="tvTituloPlatos">Lista de Platos Típicos</string>
    <string name="tvTituloRestaurantes">Lista de Restaurantes</string>

<!--    AUTOGENERADO CON EL MENU -->
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>